[package]
name = "pori"
version = "0.0.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Parser state and error extensions for nom."
repository = "https://github.com/olson-sean-k/pori"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"
license = "MIT"
keywords = [
    "diagnostics",
    "nom",
]
categories = ["parsing"]

[dependencies]
nom = "^8.0.0"
